Swagger doc working properly, except autherisation
